--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="content">
                 <h2>升大二暑假</h2>
                 <img src="./img/n5.jpg" width="420" height="340">
-                <p>去知名的日文補習班永和日文上密集班，平日每天早上九點上課，就算是暑假仍奮發向上，開學前一週報名JLPT&nbspN5，十二月考試。</p>
+                <p>去知名的日文補習班永漢日文上密集班，平日每天早上九點上課，就算是暑假仍奮發向上，開學前一週報名JLPT&nbspN5，十二月考試。</p>
             </div>
         </div>
         <div class="container left">
